==============================================================
1.0 [2020/10/27 21:47:06]
==============================================================
 - Original release wgphpoffice (XOOPS Development Team)