@@ -24,6 +24,9 @@ use XoopsModules\Wgphpoffice;
 use XoopsModules\Wgphpoffice\PhpSpreadsheet\IOFactory;
 use XoopsModules\Wgphpoffice\PhpSpreadsheet\Spreadsheet;
 
+// deactivate xoops logger while running through this code
+$xoopsLogger->activated = false;
+
 // Create new Spreadsheet object
 $spreadsheet = new Spreadsheet();
 
